# PPO_LAB_2018

Bold/gr1/Lab10_C++/: 10.cpp  FitResult.cpp  FitResult.h  LineFit.cpp  LineFit.h  SlopeFit.cpp  SlopeFit.h
Bold/gr1/Lab12_C++/: 12.cpp  GNUmakefile  foreach.h  itr.cpp  itr.h  numutils.h
Bold/gr1/Lab1_C++/: 1.cpp  strop.cpp  strop.h
Bold/gr1/Lab2_C++/: 2.cpp  ext.cpp  ext.h  makefile
Bold/gr1/Lab3_C++/: 3.cpp  GNUmakefile  a.out  person.h  person_list.cpp  person_list.h
Bold/gr1/Lab4_C++/: 4.cpp  CMakeLists.txt  bitarray.cpp  bitarray.h
Bold/gr1/Lab5_C++/: 5.cpp  CMakeLists.txt  GNUmakefile  Person.cpp  Person.h  PersonList.cpp  PersonList.h
Bold/gr1/Lab7_C++/: 7.cpp  Date.h  GNUmakefile  Period.cpp  Period.h
Bold/gr1/Lab8_C++/: 8.cpp  CMakeLists.txt  StringWrapper.cpp  StringWrapper.h
Bold/gr1/Lab9_C++/: 9.cpp  (+3 more)
LAB03/: GNUmakefile  lab03.cpp  lab03.d  makefile  table_functions.cpp  table_functions.h
LAB03/src/: table_functions.d
LAB04/: ListFunctions.cpp  ListFunctions.h  Pair.h  makefile
Mrenca/LAB03/: lab03.cpp
Mrenca/LAB07/: MyString.cpp  MyString.h
Mrenca/LAB08/: MapPoint.cpp  MapPoint.h  lab08.cpp
Mrenca/LAB09/: MyString.cpp  MyString.h
Mrenca/LAB11/: GNUmakefile  Vector.cpp  Vector.h  lab11.cpp
Mrenca/LAB12/: Fraction.h  FractionArray.h  lab12.cpp
Mrenca/LAB13/: GNUmakefile  MyComplex.cpp  MyComplex.h
Mrenca/LAB14/: Bike.h  Car.cpp  Car.h  Vehicle.cpp  Vehicle.h  lab_14.cpp
Mrenca/LAB15/: Dzialanie.h  Dzielenie.cpp  Dzielenie.h  Pierwiastek.cpp  Pierwiastek.h  Suma.cpp  Suma.h  lab15.cpp
Rachwal/Lab01_C++/: CMakeLists.txt  GNUmakefile  Main.cpp
Rachwal/Lab01_C++/include/: StudentList.h
Rachwal/Lab01_C++/src/: StudentList.cpp  StudentListOperations.cpp
Rachwal/Lab02_C++/: CMakeLists.txt  main.cpp
Rachwal/Lab02_C++/include/: MapDistance.h  MapPoint.h
Rachwal/Lab02_C++/src/: MapDistance.cpp  MapPoint.cpp
(+29 files in other folders)
